# skill-pptx

./: .gitignore  CLAUDE.md  README.md  SKILL.md  apm.yml  pypptx.py  pyproject.toml
.apm/skills/pyxlsx/: SKILL.md  apm.yml  pyproject.toml
.apm/skills/pyxlsx/pyxlsx/: cli.py
.apm/skills/pyxlsx/pyxlsx/ops/: pack.py  write.py
.github/: apm-readme-template.md
.github/workflows/: release.yml
.takt/: assets-manifest.json  config.yaml
.takt/beads/: B-011dcdd6.json  B-04b3ecad.json  B-084ff280.json  B-08c7e6b6.json  B-0c040317.json  B-0d1f2859.json  B-1023fd74.json  B-127c7e6a.json  B-150f15c0.json  B-1853c640.json  B-1d51984d.json  B-23fe63b6.json  B-2449edfe.json  B-2be9e5d1.json  B-2e57a95f.json  B-30d68f03.json  B-338d86fc.json  B-36afd762.json  B-379f2433.json  B-407ceaca.json  B-457182d7-corrective.json  B-457182d7.json  B-4797d90b.json  B-4befdc71.json  B-4ed9f9d5.json  B-52ca6e5a.json  B-55e6880d.json  B-59d72d1a.json  B-5a1824ba.json  B-5cd46262.json  B-677c8330.json  B-680b5593.json  B-6dc0a09b.json  B-6f4f9607.json  B-6fa5ac31.json  B-74563794.json  B-76c52394.json  B-774f185f.json  B-89996fdb.json  B-8c9fdaa7.json  (+39 more)
pypptx/: cli.py
pypptx/ops/: clean.py  extract.py  pack.py  slides.py  thumbnails.py
specs/done/: add-pypptx-verify-command-for-post-generation-validation.md  demote-font-size-below-12pt-check-from-error-to-warning.md  improve-slide-layout-selection-guidance-for-agents.md  pypptx-cli-powerpoint-manipulation-toolkit.md  pypptx-thumbnails-command.md  (+2 more)
tests/: test_cli.py  test_slides.py  test_standalone.py  test_thumbnails.py  test_verify.py
(+8 files in other folders)
