[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxlsx"
version = "0.1.0"
description = "A Python CLI package for manipulating .xlsx files"
requires-python = ">=3.9"
dependencies = [
    "click",
    "openpyxl",
    "defusedxml",
]

[project.scripts]
pyxlsx = "pyxlsx.cli:cli"

[tool.hatch.build.targets.wheel]
packages = [".apm/skills/pyxlsx/pyxlsx"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
